# FreeImage

./: .gitignore  CMakeLists.txt  FreeImage.2017.sln  FreeImage.2017.vcxproj  FreeImage.rc  Makefile.android  Makefile.fip  Makefile.gnu  Makefile.ios  Makefile.osx  Makefile.srcs  README.md  Whatsnew.txt  clean.bat  clean.sh  fipMakefile.srcs  genfipsrclist.sh  gensrclist.sh
.github/workflows/: cmake.yml
Source/: CMakeLists.txt  FreeImage.h  FreeImageIO.h  Plugin.h  Utilities.h
Source/FreeImage/: CacheFile.cpp  FreeImageIO.cpp  J2KHelper.cpp  MemoryIO.cpp  MultiPage.cpp  PSDParser.cpp  Plugin.cpp  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  PluginG3.cpp  PluginHDR.cpp  PluginJXR.cpp  PluginPCX.cpp  PluginPFM.cpp  PluginPICT.cpp  PluginPNM.cpp  PluginPSD.cpp  PluginRAW.cpp  PluginTARGA.cpp  PluginTIFF.cpp  PluginWebP.cpp  tmoReinhard05.cpp
Source/FreeImageLib/: FreeImageLib.2017.vcxproj
Source/FreeImageToolkit/: CopyPaste.cpp  Flip.cpp
Source/LibJPEG/: LibJPEG.2017.vcxproj
Source/LibJXR/: LibJXR.2017.vcxproj  README
Source/LibJXR/common/include/: guiddef.h  wmspecstring.h
Source/LibJXR/image/decode/: JXRTranscode.c  decode.c  decode.h  postprocess.c  segdec.c  strInvTransform.c  strPredQuantDec.c  strdec.c  strdec_x86.c
Source/LibJXR/image/encode/: encode.c  encode.h  segenc.c  strFwdTransform.c  strPredQuantEnc.c  strenc.c
Source/LibJXR/image/sys/: adapthuff.c  common.h  image.c  strPredQuant.c  strTransform.c  strTransform.h  strcodec.c  strcodec.h  windowsmediaphoto.h  xplatform_image.h
Source/LibJXR/jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRMeta.c  JXRMeta.h
Source/LibOpenJPEG/: LibOpenJPEG.2017.vcxproj
Source/LibPNG/: LibPNG.2017.vcxproj  pnglibconf.h  pngpriv.h
Source/LibRawLite/: LibRawLite.2017.vcxproj  LibRawLite.2017.vcxproj.filters
Source/LibRawLite/internal/: dcraw_common.cpp  dcraw_defs.h  defines.h  libraw_x3f.cpp
Source/LibRawLite/libraw/: libraw_types.h
Source/LibRawLite/src/decoders/: unpack_thumb.cpp
Source/LibTIFF4/: CMakeLists.txt  ChangeLog  LibTIFF4.2017.vcxproj  LibTIFF4.2017.vcxproj.filters  Makefile.am  libport.h  libtiff.def  libtiff.map  mkg3states.c  mkspans.c  t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_config.h  tif_config.h.cmake.in  tif_config.h.in  tif_config.vc.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jbig.c  tif_jpeg.c  tif_jpeg_12.c  tif_luv.c  tif_lzma.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  (+31 more)
Source/LibWebP/: AUTHORS  ChangeLog  LibWebP.2017.vcxproj  LibWebP.2017.vcxproj.filters  NEWS  README  README.mux
Source/LibWebP/src/dec/: alpha_dec.c  alphai_dec.h  buffer_dec.c  common_dec.h  frame_dec.c  idec_dec.c  io_dec.c  quant_dec.c  tree_dec.c  vp8_dec.c  vp8_dec.h  vp8i_dec.h  vp8l_dec.c  vp8li_dec.h  webp_dec.c  webpi_dec.h
Source/LibWebP/src/demux/: anim_decode.c  demux.c
Source/LibWebP/src/dsp/: alpha_processing.c  alpha_processing_neon.c  alpha_processing_sse2.c  alpha_processing_sse41.c  cost.c  cpu.c  dec.c  dec_neon.c  dec_sse2.c  dsp.h  dsp.upsampling_mips_dsp_r2.c  dsp.yuv_mips_dsp_r2.c  enc.c  enc_sse2.c  filters.c  filters_sse2.c  lossless.c  lossless.h  lossless_common.h  lossless_enc.c  lossless_enc_mips32.c  lossless_enc_sse2.c  lossless_enc_sse41.c  lossless_sse2.c  msa_macro.h  rescaler.c  rescaler_mips_dsp_r2.c  rescaler_msa.c  rescaler_neon.c  rescaler_sse2.c  ssim.c  upsampling.c  upsampling_msa.c  upsampling_neon.c  yuv.c  yuv.h
Source/LibWebP/src/enc/: alpha_enc.c  analysis_enc.c  backward_references_cost_enc.c  backward_references_enc.c  backward_references_enc.h  config_enc.c  cost_enc.h  frame_enc.c  histogram_enc.c  histogram_enc.h  iterator_enc.c  picture_csp_enc.c  picture_rescale_enc.c  picture_tools_enc.c  predictor_enc.c  quant_enc.c  syntax_enc.c  vp8i_enc.h  vp8l_enc.c  vp8li_enc.h  webp_enc.c
Source/LibWebP/src/mux/: anim_encode.c  animi.h  muxedit.c  muxi.h  muxread.c
Source/LibWebP/src/utils/: bit_reader_inl_utils.h  bit_reader_utils.c  bit_reader_utils.h  bit_writer_utils.c  bit_writer_utils.h  color_cache_utils.c  color_cache_utils.h  filters_utils.h  huffman_encode_utils.c  huffman_encode_utils.h  huffman_utils.c  huffman_utils.h  quant_levels_dec_utils.h  quant_levels_utils.h  random_utils.h  rescaler_utils.c  rescaler_utils.h  thread_utils.c  thread_utils.h  utils.c  utils.h
Source/Metadata/: Exif.cpp  FreeImageTag.h  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
Source/OpenEXR/: OpenEXR.2017.vcxproj
Source/OpenEXR/Half/: eLut.cpp  toFloat.cpp
Source/OpenEXR/IlmImf/: ImfAttribute.cpp  ImfDeepTiledOutputFile.cpp  ImfOutputFile.cpp  ImfRgbaYca.cpp  ImfSimd.h  ImfTiledOutputFile.cpp
Source/ZLib/: CMakeLists.txt  ZLib.2017.vcxproj  deflate.c  deflate.h  gzguts.h  trees.c  zutil.c  zutil.h
TestAPI/: .gitignore  CMakeLists.txt  MainTestSuite.cpp  Test.2017.sln  Test.2017.vcxproj  testMPageMemory.cpp
Wrapper/FreeImagePlus/: FreeImagePlus.2017.vcxproj  FreeImagePlus.h  WhatsNew_FIP.txt  clean.bat
Wrapper/FreeImagePlus/src/: fipWinImage.cpp
cmake/: FreeImageConfig.cmake.in
